# QR-Encoder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.c  qr.c
.github/workflows/: qr-encoder-ci-cd.yml
include/: qr.h
src/: CMakeLists.txt  qr.c
test/: CMakeLists.txt  test_suite.c
